[package]
name = "beach_map"
version = "0.2.0"
authors = ["leudz <dylan.ancel@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation of a slotmap"
keywords = ["beachmap", "slotmap"]
categories = ["data-structures"]
readme = "README.md"
repository = "https://github.com/leudz/beach_map"

[dependencies]
rayon = {version = "1.0.3", optional = true}

[features]
parallel = ["rayon"]