[package]
name = "beach_map"
version = "0.2.1"
authors = ["leudz <dylan.ancel@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation of a slotmap"
keywords = ["beachmap", "slotmap"]
categories = ["data-structures", "no-std"]
readme = "README.md"
repository = "https://github.com/leudz/beach_map"

[dependencies]
rayon = { version = "^1", optional = true }
serde = { version = "^1", optional = true, default-features = false }

[features]
parallel = ["rayon", "std"]
std = []

[dev-dependencies]
serde_json = "^1"
